# SLIC

./: CMakeLists.txt  README.md  slic.cpp  slic.hpp  slic_test.cpp
include/: slic.hpp
sample/: CMakeLists.txt  sample.cpp
src/: slic.cpp  slic.hpp
